done working on the profile page , store the tokens in the session storage

--- a/front-end/src/pages/Profile/GamesHistory/GamesHistoryStyle.css
+++ b/front-end/src/pages/Profile/GamesHistory/GamesHistoryStyle.css
@@ -34,6 +34,7 @@ table tr td > a {
   }
   
   table {
+    width: 100%;
     background-color: #111;
     border-radius: 10px;
     overflow: hidden;
