--- a/front-end/src/components/Header/HeaderStyle.css
+++ b/front-end/src/components/Header/HeaderStyle.css
@@ -50,9 +50,6 @@
   color: #111;
 }
 
-/* .logo svg {
-} */
-
 .sub-logo {
   align-self: flex-end;
   /* align-items: flex-end; */
@@ -79,6 +76,22 @@
 }
 
 .primary-header.identified .search-bar {
+  position: relative;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  padding-inline: 1rem;
+  padding-block: 0.5rem;
+  width: 500px;
+  /* border-radius: 100vw; */
+  border-radius: 100vw;
+  border: 1px solid lightgray;
+  background-color: #fff;
+  z-index: 999;
+  cursor: pointer;
+  /* overflow: hidden; */
+  /*
+  position: relative;
   display: flex;
   gap: 1rem;
   align-items: center;
@@ -88,10 +101,23 @@
   border-radius: 100vw;
   border: 1px solid lightgray;
   background-color: #fff;
+  */
 }
 
-.primary-header.identified .search-bar i {
-  color: lightgray;
+.primary-header.identified .search-bar.is-clicked {
+  border-radius: 10px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+/* .primary-header.identified .search-bar.overflow-not-hidden {
+  overflow: visible;
+} */
+
+.primary-header.identified .search-bar svg {
+  fill: lightgray;
+  width: 32px;
+  height: 32px;
 }
 
 .primary-header.identified .search-bar input {
@@ -101,7 +127,32 @@
   outline: none;
 }
 
+@media (max-width: 600px) {
+  .primary-header.identified .search-bar {
+    width: 49.6px;
+    aspect-ratio: 1 / 1;
+    border-radius: 100vw;
+    padding: .5rem;
+  }
+
+  .primary-header.identified .primary-header-content .logo {
+    flex: 1;
+  }
+  
+  .primary-header.identified .search-bar svg {
+    margin: auto;
+    width: 1.5rem;
+    aspect-ratio: 1 / 1;
+  }
+
+  .primary-header.identified .search-bar input {
+    display: none;
+  }
+}
+
 .primary-header.identified .primary-header-content {
+  display: flex;
+  gap: 1rem;
   position: relative;
 }
 
@@ -110,7 +161,7 @@
   align-self: center;
   width: 45px;
   height: 45px;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .primary-header.identified .primary-header-content .user-image::before {
@@ -121,7 +172,6 @@
   width: 12px;
   height: 12px;
   border-radius: 100%;
-  z-index: 999;
 }
 
 .primary-header.identified[data-status="online"] .user-image::before {
@@ -141,13 +191,25 @@
 
 .primary-header.identified .user-image {
   cursor: pointer;
-  border-radius: 100vw;
-  /* overflow: hidden; */
 }
 
 .primary-header.identified .user-image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 100vw;
+}
+
+.primary-header.identified .user-edit-status {
+  font-size: var(--size-300);
+  align-self: flex-end;
+  background-color: #111;
+  color: #fff;
+}
+
+.primary-header.identified[data-status="online"] .user-edit-status {
+  outline: 2px solid var(--color-online);
+}
+
+.primary-header.identified[data-status="busy"] .user-edit-status {
+  outline: 2px solid var(--color-busy);
 }
