--- a/front-end/src/components/Header/HeaderStyle.css
+++ b/front-end/src/components/Header/HeaderStyle.css
@@ -127,19 +127,71 @@
   outline: none;
 }
 
+.primary-header.identified .magnifiying-glass-icon{
+  display: none;
+  width: 2rem;
+  height: 2rem;
+  cursor: pointer;
+}
+
+.primary-header.identified .magnifiying-glass-icon:hover{
+  scale: 1.070;
+}
+
+.primary-header.identified .search-bar .back-icon{
+  display: none;
+  border-right: 1px solid lightgray;
+  padding-right: .5rem;
+}
+
+.primary-header.identified .search-bar .back-icon:hover{
+  scale: 1.07;
+  fill: #333;
+}
+
+
 @media (max-width: 600px) {
-  .primary-header.identified .search-bar {
-    width: 49.6px;
-    aspect-ratio: 1 / 1;
-    border-radius: 100vw;
-    padding: .5rem;
+  
+  .primary-header.identified .search-bar .back-icon{
+    display: block;
+    order: 1;
+  }
+
+  .primary-header.identified .search-bar .magnifiying-icon{
+    display: block;
+    order: 3;
+  }
+
+  .primary-header.identified .search-bar input{
+    order: 2;
+  }
+  
+  .primary-header.identified .magnifiying-glass-icon{
+    display: block;
   }
 
   .primary-header.identified .primary-header-content .logo {
     flex: 1;
   }
   
-  .primary-header.identified .search-bar svg {
+  .primary-header.identified .search-bar {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    /* height: 100vh; */
+  }
+  
+  .primary-header.identified .search-bar.displayed {
+    display: flex;
+  }
+
+
+  
+
+
+  /* .primary-header.identified .search-bar svg {
     margin: auto;
     width: 1.5rem;
     aspect-ratio: 1 / 1;
@@ -147,7 +199,8 @@
 
   .primary-header.identified .search-bar input {
     display: none;
-  }
+  } */
+
 }
 
 .primary-header.identified .primary-header-content {
@@ -161,7 +214,7 @@
   align-self: center;
   width: 45px;
   height: 45px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .primary-header.identified .primary-header-content .user-image::before {
@@ -191,12 +244,33 @@
 
 .primary-header.identified .user-image {
   cursor: pointer;
+  /* overflow: hidden; */
+  border-radius: 100vw;
 }
 
 .primary-header.identified .user-image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  overflow: hidden;
+  border-radius: 100vw;
+}
+
+.primary-header.identified .primary-header-content .user-image {
+  position: relative;
+  align-self: center;
+  width: 45px;
+  height: 45px;
+}
+
+.primary-header.identified .primary-header-content .user-image::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 12px;
+  height: 12px;
+  border-radius: 100%;
 }
 
 .primary-header.identified .user-edit-status {
@@ -212,4 +286,20 @@
 
 .primary-header.identified[data-status="busy"] .user-edit-status {
   outline: 2px solid var(--color-busy);
+}
+
+
+@media (max-width: 825px) {
+  .sub-logo{
+    display: none;
+  }
+}
+@media (max-width: 600px) {
+  .sub-logo{
+    display: block;
+  }
+  /* svg{
+    width: 30px;
+    height: 30px;
+  } */
 }
