--- a/front-end/src/pages/Chat/chat-sidebar/chat-type-block/ChatTypeBlockStyle.css
+++ b/front-end/src/pages/Chat/chat-sidebar/chat-type-block/ChatTypeBlockStyle.css
@@ -54,20 +54,55 @@
   overflow-x: hidden;
 }
 
+.chat-sidebar-item-header .friends-icon, .chat-sidebar-item-header .groups-icon{
+  display: none;
+  width: 2rem;
+  height: 2rem;
+  /* font-size: var(--size-500); */
+}
 
-@media (max-width: 600px) {
+.chat-sidebar-item-header .friends-icon svg,.chat-sidebar-item-header .groups-icon svg{
+  width: 100%;
+  height: 100%;
+  fill: #fff;
+}
 
-  .chat-sidebar-item-header{
-    display: flex;
-    flex-direction: column;
+
+@media (max-width: 900px){
+  .chat-sidebar{
+    max-width: max-content;
   }
 
+  .chat-sidebar-item-header .friends-icon, .chat-sidebar-item-header .groups-icon{
+    display: block;
+    margin: auto;
+  }
+
+  .chat-sidebar-item-header .chat-title, .chat-sidebar-item-header a{
+    display: none;
+  }
+  
   .chat-item-title{
     display: none;
   }
 
   .chat-item-message{
     display: none;
+  }
+}
+
+
+@media (max-width: 600px) {
+  .chat-sidebar{
+    /* display: none; */
+    position: absolute;
+    z-index: 999;
+    width: .5rem;
+    margin-left: -0.7rem;
+  }
+
+  .chat-sidebar:hover{
+    width: 100%;
   }
 
 }
