--- a/front-end/src/pages/Profile/ProfileUserInfos/ProfileUserInfosStyle.css
+++ b/front-end/src/pages/Profile/ProfileUserInfos/ProfileUserInfosStyle.css
@@ -22,6 +22,7 @@
   border: 5px solid #f1f1f1;
   border-radius: 100vw;
   transform: translate(-50%, -50%);
+  overflow: hidden;
 }
 
 .profile-user-image img {
