--- a/front-end/src/pages/group/membership-requests/MembershipRequestsStyle.css
+++ b/front-end/src/pages/group/membership-requests/MembershipRequestsStyle.css
@@ -8,7 +8,7 @@
   padding: 1rem;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
-  width: 100%;
+  /* width: 100%; */
 }
 
 .membership-requests,
